--- a/404.md
+++ b/404.md
@@ -2,5 +2,5 @@
 permalink: /404.html
 ---
 
-Oops! You have entered a site that doesn't exist on Tairikuookami's repo!
-哦， 你走错路了！
+- Oops! You have entered a site that doesn't exist on Tairikuookami's repo!
+- 哦， 你走错路了！
